Changed to kramdown Markdown interpreter since Maruku has been shutdown and Github has been spamming my Inbox. Also, a few minor fixes

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: A stylish blog using the Solarized color palette
 permalink: /:year/:month/:day/:title/
 paginate: 10
 pygments: true
+markdown: kramdown
 
 exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
 baseurl: /uvic-programming-club.github.io
